tests/suite/manifests/upstream-settings-policy/invalid-svc-usps.yaml
apiVersion: gateway.bessystem.com/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: usps-target-not-found
spec:
  zoneSize: 512k
  targetRefs:
  - group: core
    kind: Service
    name: targeted-svc-dne
  keepAlive:
    connections: 10
    requests: 3
    time: 10s
    timeout: 50s
