tests/suite/manifests/upstream-settings-policy/valid-merge-usps.yaml
apiVersion: gateway.bessystem.com/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: merge-usp-1
spec:
  targetRefs:
    - group: core
      kind: Service
      name: coffee
  keepAlive:
    time: 1m
    timeout: 5h
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: merge-usp-2
spec:
  targetRefs:
    - group: core
      kind: Service
      name: coffee
  keepAlive:
    connections: 100
    requests: 55
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: z-merge-usp-3
spec:
  targetRefs:
    - group: core
      kind: Service
      name: coffee
  keepAlive:
    connections: 11
    requests: 15
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: z-usp
spec:
  zoneSize: 64k
  targetRefs:
    - group: core
      kind: Service
      name: tea
---
apiVersion: gateway.bessystem.com/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: a-usp-wins
spec:
  zoneSize: 128k
  targetRefs:
    - group: core
      kind: Service
      name: tea
